added custom error pages

--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -4,6 +4,7 @@
 
 {% block meta %}
 <meta name="keywords" content="{{ post.meta_keywords }}">
+<meta name="description" content="{{ post.description }}">
 {% endblock meta %}
 {% block title %}{{ post.title|capfirst }}{% endblock title %}
 
