--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% block meta %}
+<meta name="description" content="Python on the Web Homepage">
+{% endblock meta %}
+
+{% block title %}Python on the Web{% endblock title %}
+
 {% block content %}
 
 <h1 class="sr-only">Python on the Web Homepage</h1>
