--- a/templates/404.html
+++ b/templates/404.html
@@ -11,5 +11,5 @@
 
 {% block content %}
 <h1>Page Not Found</h1>
-<p>Return to <a href="{% url 'main:index' %}">Home.</a></p>
+<p>Return <a href="{% url 'main:index' %}">Home.</a></p>
 {% endblock content %}
