--- a/templates/500.html
+++ b/templates/500.html
@@ -11,5 +11,5 @@
 
 {% block content %}
 <h1>Internal Server Error 💩</h1>
-<p>Return to <a href="{% url 'main:index' %}">Home.</a></p>
+<p>Return <a href="{% url 'main:index' %}">Home.</a></p>
 {% endblock content %}
