robots.txt; next/prev posts buttons, date on posts

--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -8,6 +8,15 @@
 {% endblock meta %}
 {% block title %}{{ post.title|capfirst }}{% endblock title %}
 
+{% block style %}
+<style>
+    .post-navigation {
+        font-size: .8rem;
+        margin-block-start: 1rem;
+    }
+</style>
+{% endblock style %}
+
 {% block content %}
 <section>
     <h1>{{ post.title|capfirst }}</h1>
@@ -30,5 +39,15 @@
     </div>
     {% endfor %}
 
+</aside>
+
+<aside class="post-navigation">
+    {% if previous_post %}
+    <p><a href="{{ previous_post.get_absolute_url }}">Previous Post - {{ previous_post }}</a></p>
+    {% endif %}
+
+    {% if next_post %}
+    <p><a href="{{ next_post.get_absolute_url }}">Next Post - {{ next_post }}</a></p>
+    {% endif %}
 </aside>
 {% endblock content %}
