--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -5,7 +5,9 @@
 {% block meta %}
 <meta name="keywords" content="{{ post.meta_keywords }}">
 <meta name="description" content="{{ post.description }}">
+<meta name="robots" content="noindex, nofollow">
 {% endblock meta %}
+
 {% block title %}{{ post.title|capfirst }}{% endblock title %}
 
 {% block style %}
