--- a/templates/partials/_post_list.html
+++ b/templates/partials/_post_list.html
@@ -1,6 +1,6 @@
 {% load markdown_extras %}
 
-<div class="index-section-post-wrapper">
+<section class="index-section-post-wrapper">
     {% if posts %}
 
     {% for post in posts %}
@@ -17,4 +17,4 @@
     {% else %}
     <p>Nothin posted yet!</p>
     {% endif %}
-</div>
+</section>
