--- a/templates/video/videos.html
+++ b/templates/video/videos.html
@@ -9,6 +9,9 @@ Videos
 {% endblock title %}
 
 {% block content %}
-<h1>Videos</h1>
+<div class="section">
+    <h1>Videos</h1>
+    <p class="small">These videos <i>might</i> help you to code better.</p>
+</div>
 {% include 'partials/_video_list.html' %}
 {% endblock content %}
