--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -12,20 +12,21 @@
 
 <section class="index-section videos">
     <h2>Latest Videos</h2>
-    <p>Videos from the <a href="https://developers.google.com/youtube/v3" target="_blank">YouTube API</a> to help you
+    <p>Videos from the <a class="underline" href="https://developers.google.com/youtube/v3" target="_blank">YouTube
+            API</a> to help you
         build awesome stuff</p>
     {% include 'partials/_video_list.html' %}
-    <p><a href="{% url 'video:list' %}">See all videos</a></p>
+    <p><a class="underline" href="{% url 'video:list' %}">See all videos</a></p>
 </section>
 
 <section class="index-section posts">
     <h2>Latest Posts</h2>
     <p>Learn to code, featuring tips, tricks, and tutorials. NOTE: These posts are written by <a
-            href="https://www.anthropic.com/" target="_blank">Anthropic's</a> Claude API</p>
+            href="https://www.anthropic.com/" target="_blank" class="underline">Anthropic's</a> Claude API</p>
     <div class="index-section-post-wrapper">
         {% include 'partials/_post_list.html' %}
     </div>
-    <p><a href="{% url 'blog:list' %}">See all posts</a></p>
+    <p><a class="underline" href="{% url 'blog:list' %}">See all posts</a></p>
 </section>
 
 <section class="index-section about">
@@ -33,7 +34,8 @@
     <p>A place to see coding videos and read up on thoughts/insights about web development, Python/Django, CSS, and
         JavaScript. The videos are gathered from YouTube and the posts are written by Anthropic/Claude. Content is
         automatically gathered and posted via cron-jobs/scripts. If you see something you like, <a
-            href="mailto:steverios.sr2@gmail.com?subject=Python%20on%20the%20Web%20Feedback">please let me know</a>!</p>
+            href="mailto:steverios.sr2@gmail.com?subject=Python%20on%20the%20Web%20Feedback" class="underline">please
+            let me know</a>!</p>
 </section>
 
 {% endblock %}
