renamed blog link in nav to blog

--- a/templates/partials/_navigation.html
+++ b/templates/partials/_navigation.html
@@ -7,7 +7,7 @@
                 <a href="{% url 'video:list' %}">Videos</a>
             </li>
             <li>
-                <a href="{% url 'blog:list' %}">Posts</a>
+                <a href="{% url 'blog:list' %}">Blog</a>
             </li>
             <li>
                 <a href="#" class="dark-mode-toggle">
