fix: add robots.txt link to base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     <script src="{% static 'main/js/themeToggle.js' %}" type="module"></script>
 
     <link rel="shortcut icon" href="{% static 'main/code.svg' %}" type="image/x-icon">
+    <link rel="robots" href="/robots.txt" type="text/plain">
     <title>{% block title %}Python on the Web{% endblock %}</title>
     {% block style %}{% endblock style %}
 </head>
