--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -17,3 +17,19 @@
         </li>
     </ul>
 </footer>
+<script type="speculationrules">
+    {
+        "prerender": [
+            {
+                "where": { "href_matches": "/*" },
+                "eagerness": "moderate"
+            }
+        ],
+        "prefetch": [
+            {
+                "where": { "href_matches": "/*" },
+                "eagerness": "conservative"
+            }
+        ]
+    }
+</script>
