fix: implement pagination for blog and video listings

--- a/templates/partials/_post_list.html
+++ b/templates/partials/_post_list.html
@@ -18,3 +18,7 @@
     <p>Nothin posted yet!</p>
     {% endif %}
 </section>
+
+{% if is_paginated %}
+{% include 'partials/_pagination.html' %}
+{% endif %}
